--- a/voda.tex
+++ b/voda.tex
@@ -568,49 +568,51 @@ Ještě stíháme jednu rychlou lesní, za týhle vody už to má docela sílu, 
 
 
 \akce{Isel a Itálie}
-\datum[3.8. - 7.8.]
+\datum[3.7. - 7.7.]
 Kuba, Štěpán, Pavel
 
 V Praze máme dobrej start, v Budějcích přesedáme do našeho auta a v jednu už sme na kempovišti na Iselu pod kataraktem.
 
-\info[Isel]{3.8.}{$300cm$ Lienz}
+\info[Isel]{3.7.}{$300cm$ Lienz}
 \usek{pod kataraktem}
 
 Jedeme 3x s pendlem.
 
 
-\info[Isel]{3.8.}{$112cm$ Hinterbichl}
+\info[Isel]{3.7.}{$112cm$ Hinterbichl}
 \usek{Horní}
 
 Jedeme 2x s pendlem
 
-\info[Isel]{4.8.}{$290cm$ Lienz}
+\info[Isel]{4.7.}{$290cm$ Lienz}
 \usek{pod kataraktem}
 
 Jedeme 4x s pendlem.
 
 Prohlížíme tunel, ale 56 je moc. Koukáme i na wasserfal strecke, ale taky moc.
 
-\info[Defereggenbach]{4.8.}{$58cm$ Hopfgarten}
+\info[Defereggenbach]{4.7.}{$58cm$ Hopfgarten}
 \usek{pod kataraktem}
 
 Jedeme 2x s pendlem.
 
-\info[Ahrnbach]{5.8.}{$33.4m^3/s$ St. Georgen / $105cm$ vodočet na vysedačce}
+\info[Ahrnbach]{5.7.}{$33.4m^3/s$ St. Georgen / $105cm$ vodočet na vysedačce}
 \usek{Schloss}
 
-Prohlížíme Reinbach, ale příde nám dost vody, v nájezdu je docela solidní válec.
+Prohlížíme Reinbach, ale příde nám dost vody, v nájezdu je docela solidní válec. Tak jedeme na Schloss.
 
-\info[Rienz]{6.8.}{placák pod přehradou na úrovni hladiny ??}
+-- Zpětně: Tady sem si rozsek obočí a navštívil nemocnici v Brunecku za 120 Eur.
+
+\info[Rienz]{6.7.}{placák pod přehradou na úrovni hladiny ??}
 \usek{Rienzschlucht}
 
 Asi minimální průtok z přehrady.... Kluci jedou až do Brixenu, jedou 3.5h, s tim, že hodinu strávíme u nejtěžšího místa. K tomu dorazili po necelý hodině od přehrady, cca 1km.
 
 
-\info[Eisack]{6.8.}{$??$}
+\info[Eisack]{6.7.}{$??$}
 \usek{todo}
 
-Poslední den jedeme jernom lammer, salzach má nakoupeno (145 je fakt moc) a Taugl je suchej.
+Poslední den jedeme jernom Lammer, Salzach má nakoupeno (145 je fakt moc) a Taugl je suchej.
 
 
 \clearpage
@@ -1576,5 +1578,240 @@ Spíme pod mostem. Ráno má Lammer asi 130cm, ale kopáč má 150 a Lammer už 
 \usek{Klasika}
 
 Dáváme Kopáč za pěkný vody, prohlížíme viděnou a neviděnou, ale všechno je to pomerně v pohodě. Válec ve vidění je poměrně přísnej, objíždíme zprava a pak jedem do levý lajny na bombovej kicker, kterej ale neni tak lehký trefit, dává to dobře jenom Venca. Neviděnnou jedeme celou zprava, v podstatě stejná lajna jako za malý vody. Zbytek už je v pohodě, všechno jetelný na oči. Na konci ještě potkáváme Alču s Mišuem, ten vyplava a je na pravym břehu, tak ho asi 20 min dostáváme na levej, ale nakonec se nám ho podaří přetáhnout. Jinak žádný větší drama, akorát chvátáme, tak dáváme jenom jeden run a jedeme domu.
+
+
+\akce{SKG}
+\datum[20.5. - 22.5.]
+
+Jedeme s Kubou do Rakouska na 4 dny. Nakonec se vracíme už v pondělí, protože Kuba schytá nějakou chřipku, ale i tak pádlování stálo za to.
+
+\info[Koppentraun]{20.5.}{$140cm$}
+\usek{Klasika}
+
+V sobotu ráno vyrážíme z Budějc. Cestou koukáme na Gimbach, ale ten je suchej, tak jedeme na Kopáč. Docela nás to baví, tak dáváme nakonec 3 jízdy a nic jinýho už ten den nevymejšlímne. Večer přejíždíme na spaní ke Schladmingu, konkrétně spíme ve štěrkovně v Mandlingu za řekou.
+
+\info[Untertalbach]{21.5.}{$108cm$  Schladming}
+\usek{Klasika}
+
+Ráno jedeme na Untráč, trošku to prohlídnem, vodu to má dobrou střední, nikde žádnej problém, tak jedem, i když sme sami. Já si úplně nedávám začátek, nejdřív dávám čelo v podkově vpravo (trochu sem to podcenil) a pak na tom dalšim dropu se tak napůl zvrhnu a slajduju lokeťákem po dně, což trochu odnese moje rameno, ale naštěstí to neni žádný drama. Zbytek už naštěstí dávám na pohodu, vodopád se mi vcelku daří naboofnout, i když ideálně bych byl radši trošku víc vlevo. Slajd u mlejna jedeme vlevo úplně na pohodu, Silberkatarakt má uprostřed strom, já to jedu celý vlevo, lajna super. Kuba jede do prava a taky to dává v pohodě. Zbytek už dojíždíme v poklidu. Další jízdu nakonec nedáváme, moje rameno neni úplně v pohodě a chci ho trochu pošetřit. Rozhodnem se přejet na Isel, kde to vypadá na dobrej stav na Defe a Prosegg.
+
+\info[Isel]{21.5.}{$260cm$ Lienz}
+\usek{Katarakt}
+
+Na Defe nakonec nedojedem, stavíme se u kataraktu, kterej je dost přesypanej a vypadá hodně v pohodě, takže dáváme katarakt. Jedeme lajnu celou dobu pravej střed do vracáku za kozou v pravo. Kuba pod nim jede pořád vpravo, já dávám traverz a jedu levej střed, obě lajny sou za tohodle stavu dost na pohodu. Spodek jedem celej u levý strany, všechno v klidu.  Pod kataraktem jedeme eště pár kiláků do vesnice na levym břehu. Pro dnešek končíme, spíme klasicky pod kataraktem.
+ 
+\info[Isel]{22.5.}{$260cm$ Lienz}
+\usek{Katarakt}
+
+Ráno je už Kubovi blbě a na vodu nechce, tak já si dávám $2\times$ solo katarakt až na plážičku a po poledni vyrážíme domu.
+
+\akce{Salza}
+\datum[3.6. - 4.6.]
+
+Nechal sem se přemluvit na rodinnej víkend na Salze.
+
+\info[Salza]{3.6.}{$170cm$ Wildalpen}
+\usek{z Wildalpenu}
+
+Nemá to moc vody, ale dá se to.
+
+\info[Salza]{4.6.}{$170cm$ Wildalpen}
+\usek{z Wildalpenu}
+
+Second run double fun?
+
+
+\akce{Norsko}
+\datum[23.6. - ?]
+
+Do Norska vyrážíme v pátek po poledni z Prahy na trajekt 23:00 v Sasnitz. Cesta probíhá bez větších obtíží a na trajekt dorážíme po 7mi hodniách, takže s pohodlným předstihem. Na trajektu se trochu prospíme a pak to zalomíme ještě na pár hodin v Trelleborgu. Delší část cesty máme ještě před sebou, ale docela to utíká a k večeru dorážíme do Telemarku. Zkoušíme Homerun, ale ten už je bohužel suchej, tak jedeme na Austbygdai, kde jsou podle vodočtu aspoň nějaký zbytky vody.
+
+
+\info[Austbygdai]{24.6.}{$9.5m^3/s$}
+\usek{kousek Kalifornie}
+
+Vody moc neni a už je dost pozdě, ale po celodení cestě se nám s Michalem chce něco sjet, tak jedeme kousek kalifornie, kterej je v kaňonu a vypadá to, že  bude relativně jetelnej. Začínáme u double dropu, kterej poměrně v pohodě jedeme středem a pak jedem následující kaňonek, kde jsou asi 3 slajdy. Jetelný to všechno je, ale určitě by to sneslo víc. Nicméně po celodenní cestě v autě je to příjemný. Spíme u mostu, kde z toho vysedáme na pravym břehu.
+
+
+\info[Numedalslagen]{25.6.}{$65m^3/s$ / 4 čárky}
+\usek{Dagali}
+
+Ráno přejíždíme na Dagali. Za cestu na nasedačku platíme 70 noků. Nasedáme na Zambezi peřejí, Kuba jede s autem dolu k závoře a my s Michalem si to deme zatim najet. Hned v nájezdu peřeje je solidní válec vpravo, kterej si zkouším najet, ale úplně se mi to nedaří. Válec si mě natáhne zpátky a trošku si zadribluju. Asi po dvou minutách a asi 5ti eskymácích se mi podaří vytáhnout do strany, ale mám docela dost. Chvílema už sem přemejšlel, že pudu ven, ale moc se mi nechtělo, zvlášť s tim, co bylo pode mnou. Tak jako tak mi to trošku udělalo představu o tom, jak to v Norsku vypadá. Zbytek peřeje už je poměrně vklidu, jednou si to sjedem než dorazí Kuba a pak si to dáváme eště jednou. Následuje asi kilometr flatu, kterej máme ale přepádlovanej hned. Další větší peřej najíždíme jazykem vpravo a pak jedeme pravym ramenem, za zatáčkou je slušnej válec přes většinu řeky, kterej objíždíme úplně vlevo. Hned další horizont je nejmocnější peřej - five holes. Je tam v nájezdu lajna z pravýho středu do leva, ale nejsme si úplně jistý, jestli bysme to stihli a válec, kterym to končí, je fakt mocnej. První dva válce teda objíždíme úplně podél břehu z leva a pak jedeme na pravej střed. Na konci peřeje se jede úplně vlevo. Následující úsek je víc na pohodu, je to kontinuálnější, ale vesměs s e to dá jet celý na oči. Až ke konci je několik peřejí, který maj charakter slajdů a obvykle končí mocnym válcem. Ty je stejně třeba prohlídnout, takže to nemá smysl moc popisovat. Jedeme až k mostu do Dagali.
+\cara
+Večer se rozhodujeme, že přejedeme na Sjou, ve Vossu je podle vodočtů strašně moc vody a nevíme, co bysme tam jezdili. Spíme někde po cestě, protože je tam zavřená silnice, kterou otevřou až ráno.
+
+\info[Sjoa]{26.6.}{$50m^3/s$}
+\usek{Asengjuvet + play run + Amot}
+
+Na Sjoe moc vody neni, ale na seznámení si dáváme vcelku úsek od Asengjuvetu až pod Amot. První kaňon je úplně v pohodě, celý jedeme na oči, je to velká krajinovka, ale úplně na pohodu. Sneslo by to i výrazně víc vody. Playrun je celkem suchej, ale dá se to přežít. Vstupenku před slalomkou jedeme celou zleva, vpravo jsou za sebou dva docela pořádný válce. Slalomak se dá jet v pohodě, pak je několik menších peřejí. První větší peřej začíná zatáčkou do prava, jedeme pravej střed a na konci v levý zatáčce je potřeba jet mocne do leva, na středu a v pravo sou velký válce. Další dvě peřeje před mostem sou čistý, jedou se středem. Přímo nad mostem je válec přes celou řeku, za tohodle stavu je nejlepší lajna 2m v pravo od břehu. Válec je tady sice větší, ale je tam jasná hrana, přes kterou se to dá krásně naboofnout. Lajny vlevo končí většinou spíš pochybně. Za mostem jsou ještě 2 velký peřeje. První jedeme v nájezdu z pravýho středu hodně do prava, v druhý půlce je pak potřeba dát si špičku na pravou roládu, který člověka proveze skrz mocnej vlnoválec. Poslední peřej jedem chicken lajnou úplně u levý strany. Za 40 kubíků už se dá jet v pohodě z levýho středu do prava boofem přes válec, ale za 50ti tahle lajna neni tak lákavá.
+
+
+\info[Sjoa]{27.6.}{$45m^3/s$}
+\usek{Ridderspranget}
+
+Večer prohlížíme poslední 2 věci a vypadá to docela rozumně, tak na to ráno nasedáme. Nad nasedačkou sou mocný vodopády a kaňonek, doporučuju prohlídnout, ale k jetí to za našeho stavu rozhodně neni. Hned za nasedačkou je jedna peřej, na konci je velká roláda ze středu do prava a za ní slušnej válec. Já jedu po kraji rolády zprava do leva, Kuba to jede na komoru přes válec a obě lajny sou poměrně úspěšný. Následuje vodopád, kterej se dá jet, nicméně za naší vody je levá lajna pravym ramenem suchá a žádnou jinou tam nevidíme, takže neseme. Za vodopádem se jede asi 200m k první pravý zatáčce, je nutný vysednou před zatáčkou, protože hned za ní to mocně teče do neskutečnýho nejetelnýho zasouváku. Přenášíme z prava. Po přenášce je jedna větší peřej v kaňonu (must-run, pozor při větší vodě), do který neni moc vidět, ale nic v zásadního v ní neni. Najíždíme zleva na střed, ke konci pravej střed. Všechno to ale odtejká. Dál se to zklidňuje a všechno jedem na oči, před silničnim mostem prohlížíme jednu výraznější peřej / slide, kterej jedem celej úplně u levýho břehu. Za silničnim mostem je Brurusti, jedna ze dvou věcí, který sme prohlželi večer předem. V hydru je to trochu horší než bez něj :) Nakonec nevidíme lajnu přes vstupní válec a ten obnášíme. Druhej válec jedeme úplně vlevo, kde trochu odtejká a poslední válec jedeme úplně v pravo, kde je vakt mocnej, ale když se to pošle na roládu vpravo, tak to člověka pproveze jak nic. Kousek za touhle věcí se nachází poslední záležitost - mocná peřej / slide. Najíždí se to celý kanálkem úplně vlevo, potom se celá řeka sejde asi do 4m širokýho slotu, kde je nejprv válec a pak roláda zleva do prava. Tuhle roládu jedeme všichni úplne zleva  a všichni končíme vpravo, přejet se nedá. Nicméně i tahle lajna je v pohodě, skončí se vpravo ve vracáku, odkud se musí trochu zamakat, ale dáse dostat. Hned za timhle je slajd ve tvaru U, kterej má uprostřed mocnej válec, ale je jetelnej jak úplně vlevo, tak u pravýho břehu. Kuba s Michalem jedou zábavnější lajnou vpravo, já dole vylehávám a nemám moc čas, tak vybírám bližší levou lajnu. Vysedá se na levym břehu asi 300m po proudu = nasedačka Asengujvetu.
+
+
+\info[Sjoa]{27.6.}{$45m^3/s$}
+\usek{Amot}
+
+Večer ještě jedeme s Michalem na vypádlování jednou Amot.
+
+\cara
+
+Na večer se jedeme podívat na Store Ulu, jestli má vodu. Prohlížíme triple kombo a vypadá to na nějakej nižší stav, tak se rozhodujem, že to další den dáme.  Protože je hezky, tak se zohodneme spát nahoře na příjezdový cestě k Rondane (platí se 50 noků). Je to super nápad na fotky a videa, ale je tam kurevská zima, když jdeme spát, tak teploměr ukazuje přesně 0. Nicméně večeříme v autě a Michal mezi tim postaví stan a v tom už se to dá vcelku přežít. Nicméně nápad to nebyl zas tak geniální.
+
+
+\info[Store Ula]{28.6.}{nízký stav}
+\usek{Klasika}
+
+Ráno prohlížíme horní nasedačku, ale přijde nám to dost suchý, tak nasedáme až na spodní nasedačce pod nevěstinym závojem. Neujdem toho moc (500m) a narazíme na první menší slajd, kterej se jede středem a hned za nim následujou největší slajdy. Za naší malý vody jsou strašně jednoduchý, ale mega zábavný. Každej si to otočíme třikrát, nicméně nejedeme poslední slajd s vodopádem, protože většina vody jde do leva, kde to dopadá na šutry a nevidíme tam lajnu, která by se tomu vyhla. Potom následujou asi 2km víceméně suchý jebky. De to jet, ale to je všechno. Po cestě naráříme na dva dropy za sebou, kde první se jede sředem a druhej u pravý strany. Po další chvilce je další hrana, která ale všude padá do šutrů, tak to přenášíme. To už je kousek před vodopádama. Vstupenka do vodopádů (slajdíky nad mostem) jsou taky suchý, takže to všichni přenášíme až nad první drop. Kuba se rozhoduje jet první, Michal fotí a já du jistit pod poslední drop. Ten se Kubovi moc nelíbí, takže nakonec jede jenom ten první. Michal jede druhej, jede všechno a najíždí dobrou lajnu, první drop ideálně pod $45\circ$, druhej nevidi a třetí klasicky zleva, bez zvedání. Třetí drop je značně limitující faktor, protože do čtvrtýho to teče poměrně rychle a vlevo hodně vody teče do undercutu (já i Michal v něm končíme, ale hlavou nahoru, takže v klidu), dobrá záchrana dole je nutností. Já jedu poslední, protože na prvnim dropu neni moc vody, tak to nechci bofnout, ale jedu až zbytečně defenzivně - mám malou rychlost a na hraně mi to nakone zadek a přepadávám. Zvedám ale rychle a chytám eště vracák před druhym dropem. ten jedu ze středu do leva, neni to úplně čistej boof, trochu mě to po cestě nakopne, ale v klidu. Třetí drop je lehčí než vypadá, v půlce to člověka trochu nakopne a nedopadá po špičce, ale pod rozumnym úhlem, takže tam ani jeden nezvedáme. Spokojený končíme a jdeme po turistický cestě dolu do vesnice k silnici.
+
+
+\info[Sjoa]{28.6.}{$40m^3/s$}
+\usek{Amot}
+
+Večer dáváme na vypádlování $3\times$ Amot, je znatelně míň vody než v pondělí, takže válce jsou výrazně menší a otevíraj se i nový lajny. Celkově je to ale pořád super zábavný.
+\cara
+
+Večer přejíždíme na Jori. Přejezd to je asi hodinku. Za cestu na Jori se platí 105 noků, dál platíme ještě 50 za spaní, i když asi bysme se stanem podle pravidel úplně nemuseli. Nakonec ale stejně spíme na vyznačenym kempu. Kemp je luxusní, nikdo tu neni, jsou tu záchody, ohniště i připravený dřevo, takže paráda.
+
+\info[Jori]{29.6.}{$15m^3/s$}
+\usek{Horní}
+
+Vyrážíme na horní Jori. /sek má asi 4km, já pendluju dolu auto a nahoru vybíhám. Na začátku je monstrózní slajd, kterej jedu z prvního vracáku, kluci o kus níž. Je to trocu jebačka, ale dá se to v pohodě. Další slajd se jede víceméně středem s vodou. Pak se přijede k suprovýmu double dropu, kterej se jede u levý strany, pak přes kicker vlevo nebo vpravo a na konci je slajd, kterej jedeme celej u pravý strany. Další slajd jedeme zprava do leva, na konci je asi 2m boof. Potom se dorazí k docela pekelný hraně, tj. esíčko, nejtěžší peřej. Je to jeden menší dropík, pak takovej drop s roládou do zatáčky a nakonec slajd. Jedu první, ale najíždim špatně už první drop, trošku ho podcenim a svícuju v něm. Sice to ustojim, ale už sem moc vpravo mimo lajnu, na poslední chvíli nahazuju špičku na roládu do prava, ale nakopne mě tam skála a z dropu letim po zadu špičkou nahoru do oblohy. Dole bouchnu zadkem o dno a to mě dotočí, že ani nemuseim eskymovat, ale lajna fakt bídná. Poslední slajd jedu vlevo. Kuba to vzdává, Michal jede, ale nad druhym dropem je taky moc vpravo, dostává se do vracáku a neví, jak z něj vyjet, tak vylejzá a ten drop přenese. Pak je ještě jeden drop do slajdu, kterej jedem celej úplně vpravo. Poslední slajd se jede ze středu na pravej střed, víceméně s vodou. Končí cca 3m dropem, kterej de do šutrů. Ten přenášíme, asi by tam byla cca 1m široká lajna úplně v pravo, ale to vidíme až ze spoda. Celkově mi to příde jako super run, krásná krajinovka, je to už hodně vysoko. Kluci ale z toho tak nadšený nejsou, takže na druhej run už se jim nechce. Co se týče vody, je to takovej střední stav, asi by to sneslo i 5 kubíků navíc. 
+
+\cara
+Večer dáváme přejezd na Raumu. Na odpolední program dáváme prohlídku spodní, je to fakt strašně mocný a ještě k tomu dost složitě přístupný, jenom ta cesta na put-in a přenášení / jištění / focení musí bejt strašnej pojeb. O těch monstrózních věcech se ani nezmiňuju... Spíme u silnice na prakuvišti asi v půlce horní Raumy.
+
+\info[Rauma]{30.6.}{$24m^3/s$}
+\usek{Horní}
+
+Ráno jedem zjistit dolu do kempu, jak je to s parazitama, ale holčina tam moc netuší a nakonec nám řiká, ať se vrátíme až po sjetí řeky (což dává smysl). Vracíme se zpátky na nasedačku. Úsek je to dost krátkej, první peřej je mini kaňon, kterej se obvykle jezdí pravym ramenem, ale máme docela dost vody a klukům se do prava nechce, tak jedeme dropem vlevo, kterej je o trochu přijatelnější. Pak následuje peřej, kterou jedme pravym ramenem úplně v pravo, bez problému na oči. Další peřej je pod mostem, válec přes celou řeku, kterej se dá jet buď boofem vlevo nebo úplně v pravo, kde odtejká. Hned za nim následuje slajd, kterej jdeme úplně vpravo podél běhu a končí se asi 1m boofem. Kuba ho neterefuje a končí ve válci, ale naštěstí se z něj asi po 15ti vteřinách dostává. Další peřej je až little Huka, který popravdě za týhle vody až zas tak malý nejsou. Jedu první, levou lajnou přes první boof, kterej je v pohodě, akorát je potřeba tlačit víc do leva, aby člověk nedopad vpravo do válce z ramena, který přitejká z boku. Potom jedu hodně na pravo, přes vracák v pravo. Výjezd z vracáku těsně nad vodopádem trochu podceňuju a natlačí mě to víc do prava, než bych chtěl. Zachraňuju co se dá, ale boof nak onci úplně netrefim, takže to mám s eskymákem, ale dostatečně dobře na to, abych pod tim dropem nezkončil. Kluky jistim z lodě dole, takže nevim, jak jeli hořejšek, ale spodek naboofli oba luxusně.
+
+Další peřej je malej slajdík, kterej se jede vlevo. Potom je poslední peřej "slide elements", kterou nakonec neseme. Lajny tam sou, ale za týhle vody to fakt chce velkou odvahu a nikomu se to nechce najet. Potom už je jenom jednoduchej dojezd na vysedačku (před mostem vlevo).
+
+
+\info[Ulvaa]{30.6.}{střední stav, možná $30m^3/s$}
+\usek{Horní}
+
+Jedeme se podívat ještě na horní Ulvaa, která by podle kilometráže měla bejt 3-4 s jednim velkym slajdem. Cesta se platí (50 noků). Nasedáme na konci cesty na Pytaa, která se v zápětí vlevá do Ulvaa. Celej úsek má asi 3 km, z toho většina jsou pohodvý 3+ kontinuální peřeje. Zajmívá část je na konci, jakmile je vidět most, doporučuju prohlížet (nejlepe po cestě autem nahoru). Nad mostem je poctivá peřej, kterou najíždíme ze středu do prava a konší se asi 10m dlouhym slajdem, kterej jedem u pravý strany. Přímo pod mostem je mocnej válec, do kterýho de celá řeka. Lajna je tam celkem jasná, ale vzhledem k tomu, co je pod nim, ho nakonec přenášíme. Pod nim je totiž cca 200m dlouhej slajd. Jedeme ho celej v pravo a přinejmenším já ho mám celou dobu poměrně pod kontrolou, v lajně v pravo beru několikrát šutry, takže mě to docela zpomalí. Kluci jedou na střed, kde jedou výrazně rychlejc a maj z toho trošku jiný pocity, narozdíl ode mně se jim na druhej run vůbec nechce.
+
+\cara
+Nakonec se jdeme podívat zpátky nad nasedačku na Pytaa, řeka vypadá jako hezká krajinovka, ale na nasedačku se to musí donest a za to to asi nestojí. Na konci sou sice nějaký slajdíky, ale nad tim se to zklidňuje a cca 2km nad tim je to 3-4 (dál jsme nešli). Na spaní přejíždíme dolu na spodek Ulvaa, kde z prava přitejká mocnej vodopád. 
+
+Ráno desinfikujeme doldě dole v kempu Trollstegen za 200 noků. Moc pečlivě to ale neprobíhá - otázka, jakej to má ve skutečnosti efekt. Potom jedeme přes trolí stezku (jedeme jí asi hodinu, protože je tam hromada autobusů, co se musí míjet fakt komplikovaně) na Valdollu.
+
+
+\info[Valldola]{1.7.}{$33m^3/s$?? todo vyšší střední}
+\usek{Horní}
+
+Nasedáme pod mostem, kede de hlavní silnice přes řeku. Ze začáku je to úplně super, vody máme poměrně dost. Charakterj je drop pool drop, všechno se snadno prohlíží a dropy jsou super.  Asi po kilometru přenášíme jeden takovej divnej slot s válcem, za menší vody se jezdí, ale lajnu v něm úplně nevidíme. Takhle to probíhá k prvnímu pěšímu mostu - cca 2km. Za mostem začíná první kaňonek, kterej je v pravo dost nechutnej, ale dá se jet z leva. Hned za ním následuje další mini kaňon, kde je několik poctivejch věcí a končí to cca 4-5m dropekm, kterej tak po třech metrech padá na skálu a pak padá ten zbytek. Tenhle kaňon nakonec přenášíme na pravym břehu (cca 400m), je to docela pojeb. Potom znovu nasedáme, ze začátku je pár menších dropíků, pak ještě 2 větší slajdy a kousek před koncem je cca 4m vysokej kolmej drop, kterej jedeme úplně u pravý strany, je to poměrně autoboof. Na vysedačce u druhý pěší lávky je ještě jeden drop, taky cca 4 m, ale dost se podobá zkumavce. Jede ho jenom Michal, celej v něm zmizí, ale nakonec ani nezvedá. /dajně se dá jet ještě dál až na soutok z pravym přítokem, ale za týhle větší vody to asi nemá smysl. S přenáškou a prohlížením jedeme asi 2,5 hodiny.
+
+\info[Valldola]{1.7.}{$33m^3/s$?? střední}
+\usek{Spodní}
+
+Večer na vypádlování dáváme ještě spodní úsek, podle kilometráže je to asi 6km, ale jedeme jenom první 3km (k druhýmu mostu), který maj bejt zajímavější. Nasedačka je v kempu (viz Obsommer). Vody máme tak akorát, je to zabavnej run WW 3-4, kterej celej jedem na oči asi 20 min. Je tam pár vtipnějších míst, ale všechno se to dá v pohodě najet. Super na tom je, že je to v podstatě celý kontinuální, takže se člověk ani chvilku nenudí.
+
+\info[Valldola]{2.7.}{$33m^3/s$?? todo}
+\usek{Horní}
+
+Další den chtěj dát kluci jako odpočinkovej a moc se jim pádlovat nechce, ale ráno je chvíli docela hezky, tak je přemlouvám aspoň na krátkej run na horní Valldole. Nakonec jede jenom Michal a Kuba fotí a pendluje. Nechce se nám přenášet, takže jedeme horní úsek jenom k první lávce. Je to úplně super, jak to máme najetý, tak už nic neprohlížíme a je to super zábava. Navíc máme i lepší počasí, než den před tim. Nepřenášíme ani místo se slotem, jedeme ho vlevo takovym suchym kanálkem, kterej pod slotem padá asi 1m skokem zpátky do řeky. Je to tak super, že dáváme ještě druhej run.
+
+\cara
+
+Odpoledne přejíždíme někam k Ottě, což znamená cestu přes trajekt (platíme asi 150 noků) a cestu přes dvě celkem vysoký sedla. Ale aspoň cesta neni nudná a je se na co dívat. Večer spíme u Otty. Večer a přes noc i trochu prší (v podstatě poprví zazájezd), ale neni to žádný drama.
+
+
+\info[Otta]{3.7.}{asi $25m^3/s$ před soutokem, potom dvojnásobek}
+\usek{Pollfoss run}
+
+Další den dáváme Pollfoss run na Ottě. Máme docela dost vody, takže se nepoštíme do posledních cca 500ti metrů před samotnym Pollfossem, je to tady hodně kontinuální s někaloka velkejma válcema, což se nám nechce těsně před mocnejma vodopádama jezdit. Horní část úseku mě ale popravdě tolik nenadchla, jsou tam 2 velký peřeje, který jsou dobrý, ale jinak tam v podstě nic moc není, akorát pár WW4 peřejí a jedna peřej s velkýma válcema na soutoku s Torou. Dvě největší peřeje úseku jsou hned na začátku, první je takovej rozbytej skok / slajd, kterej se jede asi 3m širokym průjezdem úplně u levý strany. Je to asi 3m boof, z prava tam padá další voda, takže z toho člověk nevyjede úplně čistě, ale je to v klidu. Druhá větší peřej se jede úplně zleva, kde se objíždí solidní válec u pravý strany a pak se traverzuje na pravej střed, kde se jede takovym vysokym jazykem a nakonci se naskakuje válec. Po chvilce se objevu ještě jedna hrana, jedeme úplně v pravo, cca 1m boof.
+
+\cara
+Počasí máme takový bídnější, je trochu zima a poprchává, tak dáváme odpoledne bazén v Lomu. Bazén je v hotelu a je malinkej, ale na umytí a vyvalení se do horký výřivky je to ideální. Dáváme ještě nákup a jedeme se podívat na spodní Bovru, všechno co je vidět ze silnice je ale tak WW2 a celkově se nám to moc nepozdává, tak se jedem podívat na Skjoli.
+
+
+\info[Skjoli]{4.7.}{cca 140 cm na spodnim vodočtu ~ asi $15m^3/s$ nižší stav}
+\usek{Spodní}
+
+Cesta na Skjoli je placená - 50 noků. Cesta je zatim jedna z nejbídnějších, má vysokej střed, takže s oktávkou jedeme většinu cesty za 1 a dost opatrně. Nicméně spíme na nasedačce, resp. naší nasedačce, dá se jet ještě asi o 500m vejš od mostu, ale jsou tam celkem rozlitý úseky, který nám přijdou suchý. Nasedáme nad asi nejtěžším kaňonkem (cca 3.5km po silnici nad štěrkovnou). Tenhle kaňonek doporučuju prohlídnout, pokud by to tam vypadalo na moc vody, tak bych dál nejezdil. Celkově nemá moc smysl popisovat jednotlivý peřeje, je to cca 6km a teče to kontinuálně bez jedinýho hluchýho místa. První jízdu jedeme asi 2:15min, s tim, že prohlížíme odhadem tak polovinu peřejí. Potom ještě s Michalem jedeme druhou jízdu, máme trochu míň vody, ale dáváme to ve sportovnějším tempu za 45 min. Je to opravdu z kopce, jakákoliv záchrana materiálu by tady byla asi hodně problematická. My máme spíš nižší střední vodu, ale popravdě o moc víc bych tu mít nechtěl, to pak musí bejt opravdu poctivá sypačka. Za týhle vody jsme v podstatě neměly žádnej větší problém, nemělo to ještě takovou sílu, ale je potřeba bej celou cestu pozornej. Za zmínku stojí vodočet na možný vysedačce (my vysedali až pod silničním mostem), ke kterýmu se dá dojít z levýho břehu od posledních baráků. Vodočet sice hodně pulzuje, ale nám ukazoval zhruba kolem 140cm.
+
+
+\info[Skjerva]{5.7.}{asi $6-8m^3/s$ jebka}
+\usek{Spodní}
+
+Na další den si naplánujeme Skjervu, kde by podle kilometráže měly bejt 4km super bedrock slidů. Ale realita je jiná - je to jebka. Nasedáme v zatáčce, odkud se de k řece cca 15-20 minut potokem. Pak se jede pár set metrů a možná hodinu přenášíme obží zával, kterej v řece vytváří nesmyslnou sifonádu. Za tim už sice všechno jedeme, něco na oči - něco ne, ale o slajdech se nám může jenom nechat zdát. Je to tak 3km spíš boulder garden, něco prohlížíme, něco ne, sem tam je tam nějakej 1m průzkok, ale nic moc extra. Až na posledních možná 500m se charakter změní, objevujou se menší slidy, docela zábavný, ale všechno se dá jet na oči. Vysedá se u silničního mostu. Celkově to jedeme asi 3 hodiny a je to strašná jebka - jak nasedačka, tak žeka, tak vysedačka. I když podle kilometráže by to měl bejt dobrej stav, tak je to žalostně málo. Smysl by to mělo tak za dvojnásobku - odhadem aspoň 15 kubíků. Asi by to bylo celkem kontinuální a nabralo to na síle, ale mělo by to smysl. Nicméně přenášení by to o moc neulehčilo, hlavní přenáška je nejetelná za jakýhokoliv stavu.
+
+\cara
+
+Večer přejíždíme na Drivu. Jako bonus jsme ještě asi píchli jedno zadní kolo - utíká pomalu, ale jistě. Takže večer ještě měníme kolo za rezervu.
+
+
+\info[Driva]{6.7.}{$42m^3/s$  Grenseholen}
+\usek{Graura}
+
+Nasedáme nad silničnim mostem před malou soutězskou. První 2 kiláčky sou poměrně v pohodě, pak se to zavře do kaňonu s kolmýma stěnama, kterej je tak odhadem 3km dlouhej. Prohlížení je obvykle komplikovaný, ale možný. Je to poměrně big water, ale přijde mi, že to většinou odpouští. První velká peřej se jede úplně u pravý strany a na konci chce člověk do leva. Další už jsou trochu menší, ale srovnatelně obtížný. Většinou by to šlo i přenášet, jedna peřej je trochu vyjímka. Koukaj z ní všude velký šutry a nejde to moc prohlídnout. Rozumný sou tady dvě lajny, buď úplně středem, kde je zasouvák s válcem, ale měl by jít naboofnout. My sme jeli lajnu z leva na střed mezi dva velký šutry (první a druhej zleva), kde se jede boofem přes válec a pak je tam roláda zleva do prava, ale jakmile člověk naboffne válec, tak je to v klidu. Když skončí tenhle kaňonek, tak je asi 2km klidnější úsek WW2-3, ale za chvíli to pomalu zase nabere na spádu a peřeje sou podobný, jako před tim, zablokovaný, většina de jet na oči, ale některý prohlížíme. Za zmínku stojí peřej, kde je obří šutr uprostřed řeky, vlevo to de do sifonů a v pravo je průjezd cca 2m širokej. Jede se to vpravo, úplně u levý strany po skále, čimž se úplně mine válec. Peřejí je tolik, že to nejde všechno popisovat. Končíme před prvnim mostem v pravo, dál už nic neni.
+
+Řeka je to fakt super, trochu se to podobá Amotu, ale nejsou tam tak velký válce, ale je to trochu víc zablokovaný. Hlavně je to výrazně delší, asi 14km dohromady. Jedeme to s prohlížením 2:30min.
+
+
+\info[Grovu]{7.7.}{asi $10m^3/s$ }
+\usek{Horní}
+
+Na vysedačce i nasedačce se zdá, že máme docela dost vody, ale je to jebka. Vodopád nad nasedačkou padá do šutrů a za tohodle stavu se jet nedá. Nasedáme na slajd pod tim, kterej je v pohodě, ale žádnej zázrak. Následující kilometr se víceméně nic neděje, dokud řeka nezačne bejt dost zablokovaná. Chvíli se dá jet, první peřej jedeme, pak je další peřej která se jede zleva do prava podél skály, kde se řeka stáčí o devadesát stupňů do leva. Tady je potřeba chytit vracák, další peřej je přenáška (vlevo). Konec peřeje jedeme úplně zprava, pak už se charakter mění a je to otevřenější. Zajímavejch je asi až posledních 500m, kde se to sevře a jsou tam menší slajdíky, ale poměrně brzo to končí, vysedáme před mostem vpravo. Za týhle vody je to celkem jebka, ale celkově tam ani nic moc neni, na začátku je to WW4, ale přenáška za to fakt nestojí, ke konci už spíš jenom WW3+, ale přibyde tam nějaká voda, tak to aspoň neni tak hrozný. Po druhý bych to ale jet nemusel.
+
+
+\info[Grovu]{7.7.}{asi $25m^3/s$ }
+\usek{Spodní}
+
+Na spodní úsek se jde z vesnice na pravym břehu po turitický stezce pod mocnej vodopád. Vody máme relativně dost. Hned za nasedačkou je dobrej 1m boof, jedeme u pravý strany. Po chvilce je větší peřej v levý zatáčce, kterou prohlížíme a jedem v pravo 3 boofy v řadě (0,5-1m). Hned za tim je válec přes celou řeku, jede se středem přes jednu roládu a boof přes válec hned pod tim. Všechny další peřeje už jedeme na oči, charakter zůstává podobnej, ale je to o trochu přehlednější. Ještě jsou tam tak 4 výraznější peřeje, ale celý to popisovat nemá smysl. Je to poměrně kontinuální a hezký - charazkterově se to podobá Skjoli, akorát je tu víc vody  a je to o trochu přehlednější. /sek mě fakt baví, rozhodně značně lepší než ten horní. Jediná vada na kráse je, že na vysedačce zjišťuju, že mám prasklý dno lodi přímo pod sedačkou, cca 5cm. Nicméně jak je to vyloženě pod sedačkou, tak se to daří zalepit jenom tesou, přes terou je danej kus pěny, která je na tu prasklinu přimáčklá sedačkou, takže to ani neteče a Norsko na tom dojedu.
+
+
+\info[Sogndal]{8.7.}{$11m^3/s$  Sogndalsvatn}
+\usek{Horní}
+
+Na nesedačce u mostu to vypadá na docela pěknou vodu, plánujeme jet až pod trojkombo, kde bysme vysedli v pravo. Ze začátku je to docela dobrý, pěkný peřejky a menší slajdy. Pak následuje úsek, kde jsou 2 větší slajdy hned za sebou. Ten první prohlíží Kuba a posílá nás doleva, najíždí to první. Kuba de přes zadek a končí ve válci, kde mu spadne šprajda, ale naštěstí dojede/doplave do levýho vracáku. Podobně končí Michal, přes zadek ho to pošle do válce, kde chvíli poctivě bojuje, ale nakonec taky musí ven. Do toho přijíždim já, jdu přes zadek úplně stejně, ale jsem dostatečně vlevo a vyzvedávám už za válcem. Michalovi pomůžu k levýmu břehu, loď ale končí v protějším vracáku. Než se k ní dostanu, tak se vrací zpátky do proudu a odplavává. Michal de po levym břehu k silnici, my s Kubou pokračujeme dál. Další slajd neseme, má snad ještě větší válec a ve dvou to nechceme hrotit. Další peřej začíná slajdem, kterej jedeme vlevo a končí se pravou zatáčkou v pravo. Hned za tim je drop mezi skálama u levý strany, kterej končí úplně brutálnim válcem. Přenášíme / jedem pravym kanálkem, kterej je na půl suchej. Dál už se obtížnost trochu snižuje. Po chvilce potkáváme vpravo Micalovu loď nabalenou na stromu. K silnicím to máme dost daleko a hlavně vysoko, tak se rozhodujem, že tu loď dopravíme dolu po vodě. Většinou vždycky sjedem úsek, jeden se vrátí nahoru pro třetí loď a dojede s ní. Tahle to točíme, klidnější úsek táhnu loď na laně. Do cíle to máme asi kilometr, takže je to pojeb, ale asi lepší varianta než to táhnout nahorbez vody. Úsek je to klidnější, takže už se to vcelku dá. Jakmile se údolí otevře, vpravo sou vidět baráky a přes řeku jdou dráty, tak loď necháváme na pravym břehu. K mostu už je to nakonec asi jenom 400m, takže si Michal pro loď v klidu dojde. Ke konci ten úsek bírá ještě trochu na spádu, slide do válce kus před mostem ještě prohlížíme a jedeme vlevo. Nakonec vysedáme už u mostu, po týhle anabázi se nám ve dvou fakt triple kombo jet nechce.
+
+\cara
+Veečer přejíždíme za 123 nků Sognefjord a dojíždíme až na Brandseth, kde spíme. Ta je suchá, stejně tak ráno zjišťujeme, že je suchej Jordal (max 5 kubíků). Tak jedem na Myrku, která by podle vodočtu měla mít nějakou vodu. 
+
+\info[Myrkdal]{9.7.}{$13m^3/s$ Myrkdalsvatn }
+\usek{Horní}
+
+Celej den je hnusně a prší, Kubovi se jet nechce, tak fotí a pendluje. Ve dvou jedeme jenom horní Myrku. Na nasedačce je jeden slajd, kterej se jede středem a hned za tim je 3m boof, kterej jedem přes kicker vlevo. Je to super boof, ale hned za tim je žebro, od kterýho se vrací slušnej válec, za větší vody bude asi dost mocnej. Dalších pár peřřejí jedeme na oči, pak přichází první větší slajd, kterej se jede jak v nájezdu z prava do leva, pak následuje 30m slajd, kterej se jede levej střed. Pár dalších peřejí a malejch slajdíků je v pohodě, až následuje sekce, která jde trošku víc z kopce a mizí v pravý zatáčce. Před zatáčkou nic neni, ale hned za ní je vysokej slajd, ketrej se jede u pravýho břehu z prava na střed přes zvedající se vodu. Dál už je to rrozteklý do šířky a až do vesnice je to jebka. Náasledující 5m vodopád je nesmysl, padá do šutrů. Za nim ještě jedeme drop pod mostem, kterej je za týhle vody dost zábavnej. Pak jsou ještě 2 peřeje a vysedáme vpravo asi 300m pod mostem.
+
+\cara
+Večer se stavíme v hotelovym bazénu ve Vossu, kde maj za 120 noků bazén, saunu a výřivku, což se celkem dá. Pak přejíždíme na Raundalen, kde se fakt hrozně blbě hledá spaní, ale aspoň si prohlížíme tunel a Kitlebreaker.
+
+\info[Ekso]{10.7.}{asi $10m^3/s$ spodní limit }
+\usek{Lake 2 lake}
+
+Ráno si dáváme auto výlet, nejdřív na Tysselvu, pak na Teigdal. Výsledek je nám celkem jasnej, ale aspoň se tam koukne. Pak skočíme přes kopec kouknout i na lek to lake combo a to kupodivu vypadá jetelně. Sice to má vody dost málo, ale do videa dobrý. Jedu první, hořejšek jedu vlevo, v pravo je to za týhle vody úplnej nesmysl a vlevo je to dobrý, akorát nájezd je trochu jebačka. Nicméně z levýho břehu je tam poměrně jasná lajna. Ve výsledku je to docela v pohodě, v nájezdu se trochu drhne, ale na tý šikmý skále už jo jede na pohodu. Na roládu dole se naskakuje jak nic, za týhle vody je to fakt malý. Akorát neni moc čas na boof, ale je to jedno. Druhá půlka se jede s vodou, na poslední drop chce bejt člověk spíš trochu v pravo, vlevo neni moc vody. Nakonec je to autoboof, dopad úplně na pohodu. Druhej jede Michal, dává to taky na pohodu, Kuba fotí z protěšího břehu. Kuba nakonec jede na fotky jenom spodní půlku, já si to dávám s nim ještě jednou. Pak dojíždíme 500m doprava na kraj jezera, kde vylejzáme. Ještě prohlídnem spodní dropy a jedeme spát k mostu pod double dropem.
+
+
+\info[Raundalen]{11.7.}{$40m^3/s$ }
+\usek{Play run}
+
+Ráno jedem na randál, na train station máme asi moc vody, tak jedeme jenom na play run. Nasedáme nad Morning glory (kousek nad mostem, kde je řeka přímo u silnice), kterou si v klidu přenesem, za týhle vody je ten druhej válec fakt brutální. Kousek zatim je 3m drop, kterej se dá jet jak úplně vpravo po skále (já) nebo i středem do největšího bordelu (Michal). Další větší věc je asi 5m drop s kickerem, kterej je vidět už ze silnice mo cestě nahoru. Drop se jede úplně v pravo (jedu trochu zleva do prava) vpřes kicker, na kterej teče dost vody, takže za tohodle stavu neni žádnej problém. Kicker člověka vyšle na boof, neni tam co vymejšlet. Dál už je to poměrně v pohodě, pěkný pohodový peřejky, ke konci to malinko zostřuje, je tam ještě jeden 3m boof, kterej jedeme přes kamen / skálu úplně vlevo a kousek za tim je slajdík s válcem přes většinu řeky, kterej se jede celej vpravo. Pak je to až na vysedací most pohoda. Na to že dost prohlížíme a Kuba ladí sedačku, tak to docela utíká, jedeme to ani ne 2 hodiny.
+
+
+\info[Raundalen]{12.7.}{$55m^3/s$ }
+\usek{Play run}
+
+Přes noc nám napršelo víc vody a protože nic lepšího neteče, dáváme znovu play run. První jízdu jedu jenom s Michalem, Kuba pendluje. Vody je znatelně víc, je to trošku víc pushy, ale ve výsledku je to dost podobný. Jedeme to celkem na pohodu - s přenáškou Moring glory za 50 min. Druhou jízdu jedu s Kubou a ta už je trochu zábavnější. Drop pod Morning Glory si najíždim boofem vpravo přes šutr, ale trochu víc ze středu. Dole chytnu proud z prava, kterej mě odstadí na střed. Zpátky do prava to nestíhám, ale ani se v tý rychlosti nestihnu stočit doleva, abych to zkusil projet přes tu odtékající vodu. Výsledek je super, končim přímo ve válci víceméně bokem. Dvakrát v něm zvedám, ale sem špičkou proti proudu a nevidim moc cestu ven. Pak se znova zvrhnu, trošku mě to pod vodou projebe, ztrácim orientaci a du ven, eště si chvilku zůstanu pod vodou, než mě to vypláchne. Naštěstí je u mě hned Kuba a sem rychle na pravym břehu. Loď a pádlo se tam ještě minutu až dvě točí a pak je to taky vyplivne k pravýmu břehu, takže naštěstí všechno v pohodě odlovíme. Zbytek už je pak v pohodě.
+
+\cara
+
+Odpoledne se ještě přesouváme na Money Drop, mě už se do toho nechce, ale Michal si ho dává. Je docela málo vody, ale dává to na pohodu. Potom se přesouváme na Numedalslagen,kterej sice nemá vodu, ale je to po cestě.
+
+\info[Numedalslagen]{13.7.}{$20m^3/s$ }
+\usek{Dagali}
+
+Jedeme jenom s Kubou, vody je minimum, ale jet se to dá. První část, kde je většina peřejí je v pohodě, všechno se dá v podstatě jet na oči a ani člověk moc nedrhne. Úsek ke koktejlu je pak lae hodně velkej pojeb, je to rozlitý a je to dlouhý. Ke konci je to zas ještě docela zábava. Celý to jedem asi hodinu a čtvrt.
+
+\cara
+
+Odpoledne se dáváme na odjezd, jedeme až k Malmö před most, kde přespíme do rána. Trajekty z Trelleborgu sou buď plný nebo drahý, takže nakonec volíme levnější a jednodušší variantu - jedeme přes most do Dánska a trajektem Gedser - Rostock. Celkově je to na jeden lístek a stojí to 165 Eur. Trajekt máme na 13:00, stíháme i ten dřívější v 11:00, ale na ten už se bohužel nevejdem, takže aktuálně čekáme a pak už nás čeká jenom 7 hodin do Prahy.
 
 \end{document}.
